deployment/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: vshn-website
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  selector:
    app: vshn-website
