deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
  name: vshn-website
spec:
  rules:
    - host: vshn.ch
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: vshn-website
                port:
                  number: 8080
    - host: www.vshn.ch
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: vshn-website
                port:
                  number: 8080
  tls:
    - hosts:
        - vshn.ch
        - www.vshn.ch
      secretName: vshn-cert
